--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,67 @@
 .App {
   text-align: center;
+  color: rgba(254, 255, 255, 0.979);
+}
+.header {
+  margin-top: 10px;
+}
+.container {
+  margin-right: 15%;
+  margin-left: 15%;
+  margin-top: 60px;
+  padding: 10px 10px 10px 10px;
+  background: #2193b0; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #6dd5ed,
+    #2193b0
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #6dd5ed,
+    #2193b0
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+}
+.signup,
+.login,
+.addFriend {
+  width: 70%;
+  background-color: rgba(6, 37, 31, 0.178);
+  margin: 10%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+.list{
+ display: flex;
+ flex-direction: column;
+}
+.card {
+    text-align: left;
+    padding-left: 20px;
+    width: 250px;
+    border-radius: 0.25rem;
+    box-shadow: 0 20px 40px -14px rgba(0, 0, 0, 0.25);  
+    overflow: hidden;
+    margin: 2px;
+    background:rgba(255, 251, 251, 0.7);
+    height: fit-content;
+    color: black;
+    float: left;
+}
+input {
+  color: black;
+  font-weight: bolder;
+  width: 90%;
+  border: none;
+  border-bottom: black;
+  background-color: rgba(255, 251, 251, 0.7);
+  height: 30px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+img{
+    height: 40px;
+    width: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
